# UJOE

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  index.htlm  pagehead.htlm  pyproject.toml
docs/: USAGE.md
ops/: otel-collector.yaml  prometheus.yml
scripts/: autocorrect_loop.py  cleanup.py  ingest.py
tests/: test_tools.py
ui/: index.html  nginx.conf
uj0e/: __init__.py  config.py  main.py  model_client.py  orchestrator.py  tools.py  vector.py
